--- a/SchoolDiarySystem/Views/Comment/ReviewDetails.cshtml
+++ b/SchoolDiarySystem/Views/Comment/ReviewDetails.cshtml
@@ -29,7 +29,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <p>@Html.Label("Content", Model.Comment.Comment.ToString())</p>
+                        <p>@Html.Label("Content", Model.Comment.Content.ToString())</p>
                         <div class="info-table table-responsive">
                             <table class="table text-nowrap">
                                 <tbody>
