--- a/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutParent.cshtml
@@ -85,7 +85,7 @@
                            aria-expanded="false">
                             <div class="admin-title">
                                 @Html.Label(UserSession.GetUsers.Parent.FullName, new { @class = "item-title" })
-                                <span>Admin</span>
+                                <span>Parent</span>
                             </div>
                             <div class="admin-img">
                                 <img src="~/Content/img/figure/admin.jpg" alt="Admin">
