--- a/SchoolDiarySystem/Views/Shared/_LayoutTeacher.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutTeacher.cshtml
@@ -85,7 +85,7 @@
                            aria-expanded="false">
                             <div class="admin-title">
                                 @Html.Label(UserSession.GetUsers.Teacher.FullName, new { @class = "item-title" })
-                                <span>Admin</span>
+                                <span>Teacher</span>
                             </div>
                             <div class="admin-img">
                                 <img src="~/Content/img/figure/admin.jpg" alt="Admin">
@@ -167,9 +167,9 @@
     <!-- Full Calender Js -->
     <script src="~/Content/js/fullcalendar.min.js"></script>
     <!-- Select 2 Js -->
-    <script src="js/select2.min.js"></script>
+    <script src="~/Content/js/select2.min.js"></script>
     <!-- Date Picker Js -->
-    <script src="js/datepicker.min.js"></script>
+    <script src="~/Content/js/datepicker.min.js"></script>
     <!-- Data Table Js -->
     <script src="~/Content/js/jquery.dataTables.min.js"></script>
     <!-- Chart Js -->
