--- a/SchoolDiarySystem/Views/Account/Login.cshtml
+++ b/SchoolDiarySystem/Views/Account/Login.cshtml
@@ -55,7 +55,7 @@
                         @Html.ValidationSummary(true, string.Empty, new { @class = "text-danger" })
                         <div class="form-group">
                             <label>Username</label>
-                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Enter Username...", id = "username" })
+                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Enter Username...", id = "username", autocomplete = "off" })
                             @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
                         </div>
                         <div class="form-group">
