--- a/SchoolDiarySystem/Views/Class/Create.cshtml
+++ b/SchoolDiarySystem/Views/Class/Create.cshtml
@@ -37,7 +37,7 @@
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
                                 <label>Class Number *</label>
                                 @Html.TextBoxFor(m => m.ClassNo, new { @class = "form-control", @placeholder = "Write class number...", @type = "number", @maxlength = 1 })
-                                @Html.ValidationMessageFor(m => m.ClassNo, "", new { @class = "text-danger" })
+                                @Html.ValidationMessageFor(m => m.ClassNo)
                             </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-4 col-lg-6 col-12 form-group">
