--- a/SchoolDiarySystem/Views/Class/Index.cshtml
+++ b/SchoolDiarySystem/Views/Class/Index.cshtml
@@ -47,7 +47,7 @@
                 {
                     <form class="mg-b-20">
                         <div class="row gutters-8">
-                            <div class="col-4-xxxl col-xl-8 col-lg-3 col-12 form-group">
+                            <div class="col-4-xxxl col-xl-10 col-lg-3 col-12 form-group">
                                 <input type="text" name="searchString" placeholder="Search by class number ..." class="form-control">
                             </div>
                             <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
@@ -61,7 +61,7 @@
                         <thead>
                             <tr>
                                 <th></th>
-                                <th>Name</th>
+                                <th>Teacher</th>
                                 <th>Class Number</th>
                                 <th>Room Type</th>
                                 <th></th>
