--- a/SchoolDiarySystem/Views/Comment/Review.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Review.cshtml
@@ -23,15 +23,10 @@
                 {
                     <form class="new-added-form">
                         <div class="row">
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
-                                <h6 class="notice-title">
-                                    @Html.DisplayFor(m => m.Comment.Comment)
-                                </h6>
-                            </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
+                            <div class="col-xl-8 col-lg-6 col-12 form-group">
                                 <label>Review *</label>
-                                @Html.TextBoxFor(m => m.Review, new { @class = "textarea form-control", placeholder = "Last name...", id = "lastname" })
+                                @Html.TextAreaFor(m => m.Review, new { @class = "textarea form-control", placeholder = "Last name...", id = "lastname" })
                                 @Html.ValidationMessageFor(m => m.Review, "", new { @class = "text-danger" })
                             </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
