--- a/SchoolDiarySystem/Views/Parent/Update.cshtml
+++ b/SchoolDiarySystem/Views/Parent/Update.cshtml
@@ -23,10 +23,11 @@
                         <h3>Update Parent</h3>
                     </div>
                 </div>
-                @using (Html.BeginForm("Update", "Student", FormMethod.Post))
+                @using (Html.BeginForm("Update", "Parent", FormMethod.Post))
                 {
                     <form class="new-added-form">
                         <div class="row">
+                            @Html.HiddenFor(m => m.ParentID)
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>First Name *</label>
