--- a/SchoolDiarySystem/Views/Room/Create.cshtml
+++ b/SchoolDiarySystem/Views/Room/Create.cshtml
@@ -5,7 +5,7 @@
 @using SchoolDiarySystem.Models
 @model Rooms
 
-<div class="dashboard-page-one">
+<div class="dashboard-page-one" style="height:100%; position:relative">
     <div class="dashboard-content-one">
         <div class="breadcrumbs-area">
             <h3>Room</h3>
@@ -28,13 +28,13 @@
                     <form class="new-added-form">
                         <div class="row">
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
+                            <div class="col-xl-6 col-lg-6 col-12 form-group">
                                 <label>Room Number *</label>
                                 @Html.TextBoxFor(m => m.RoomNo, new { @class = "form-control", placeholder = "Write room number...", id = "firstname" })
                                 @Html.ValidationMessageFor(m => m.RoomNo, "", new { @class = "text-danger" })
                             </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
+                            <div class="col-xl-6 col-lg-6 col-12 form-group">
                                 <label>Room Type *</label>
                                 @Html.TextBoxFor(m => m.RoomType, new { @class = "form-control", placeholder = "Laboratory, Class,...", id = "lastname" })
                                 @Html.ValidationMessageFor(m => m.RoomType, "", new { @class = "text-danger" })
