--- a/SchoolDiarySystem/Views/Room/Update.cshtml
+++ b/SchoolDiarySystem/Views/Room/Update.cshtml
@@ -23,18 +23,19 @@
                         <h3>Update Room</h3>
                     </div>
                 </div>
-                @using (Html.BeginForm("Update", "Student", FormMethod.Post))
+                @using (Html.BeginForm("Update", "Room", FormMethod.Post))
                 {
                     <form class="new-added-form">
                         <div class="row">
+                            @Html.HiddenFor(m => m.RoomID)
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
+                            <div class="col-xl-6 col-lg-6 col-12 form-group">
                                 <label>Room Number *</label>
                                 @Html.TextBoxFor(m => m.RoomNo, new { @class = "form-control", placeholder = "Write room number...", id = "firstname" })
                                 @Html.ValidationMessageFor(m => m.RoomNo, "", new { @class = "text-danger" })
                             </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
+                            <div class="col-xl-6 col-lg-6 col-12 form-group">
                                 <label>Room Type *</label>
                                 @Html.TextBoxFor(m => m.RoomType, new { @class = "form-control", placeholder = "Laboratory, Class,...", id = "lastname" })
                                 @Html.ValidationMessageFor(m => m.RoomType, "", new { @class = "text-danger" })
