--- a/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
@@ -10,7 +10,7 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>School Diary Management | Add Teacher</title>
+    <title>School Diary Management | @ViewBag.Title</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
@@ -178,11 +178,11 @@
     <!-- Full Calender Js -->
     <script src="~/Content/js/fullcalendar.min.js"></script>
     <!-- Select 2 Js -->
-    <script src="js/select2.min.js"></script>
+    <script src="~/Content/js/select2.min.js"></script>
     <!-- Data Table Js -->
     <script src="~/Content/js/jquery.dataTables.min.js"></script>
     <!-- Date Picker Js -->
-    <script src="js/datepicker.min.js"></script>
+    <script src="~/Content/js/datepicker.min.js"></script>
     <!-- Chart Js -->
     <script src="~/Content/js/Chart.min.js"></script>
     <!-- Custom Js -->
