--- a/SchoolDiarySystem/Views/Student/Create.cshtml
+++ b/SchoolDiarySystem/Views/Student/Create.cshtml
@@ -42,7 +42,7 @@
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Gender *</label>
-                                @Html.DropDownList("GenderID", null, new { @class = "select2" })
+                                @Html.DropDownListFor(m => m.Gender, Model.Genders, new { @class = "select2" })
                                 @Html.ValidationMessageFor(m => m.Gender, "", new { @class = "text-danger" })
                             </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -54,12 +54,12 @@
                             </div>
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Class *</label>
-                                @Html.DropDownList("ClassID", null, new { @class = "select2" })
+                                @Html.DropDownListFor(m => m.ClassID, Model.ClassesList, new { @class = "select2" })
                                 @Html.ValidationMessageFor(m => m.ClassID, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Parent *</label>
-                                @Html.DropDownList("ParentID", null, new { @class = "select2" })
+                                @Html.DropDownListFor(m => m.ParentID, Model.ParentsList, new { @class = "select2" })
                                 @Html.ValidationMessageFor(m => m.ParentID, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-12 form-group mg-t-8">
