--- a/SchoolDiarySystem/Views/Teacher/Delete.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Delete.cshtml
@@ -56,7 +56,7 @@
                                     </tr>
                                     <tr>
                                         <td>E-mail:</td>
-                                        <td>@Html.Label(Model.Email, new { @class = "font-medium text-dark-medium" })</td>
+                                        <td>@Html.Label("Email", Model.Email, new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
                                     <tr>
                                         <td>Phone Number:</td>
