--- a/SchoolDiarySystem/Views/Teacher/Update.cshtml
+++ b/SchoolDiarySystem/Views/Teacher/Update.cshtml
@@ -28,6 +28,7 @@
                     <form class="new-added-form">
                         <div class="row">
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
+                                @Html.HiddenFor(m => m.TeacherID)
                                 <label>First Name *</label>
                                 @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name...", id = "firstname" })
                                 @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
@@ -39,8 +40,8 @@
                             </div>
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Gender *</label>
-                                @Html.DropDownList("GenderID", null, new { @class = "select2" })
-                                @Html.ValidationMessageFor(m => m.Gender, "", new { @class = "text-danger" })
+                                @Html.DropDownListFor(m => m.Gender, Model.Genders, new { @class = "select2" })
+                                @Html.ValidationMessageFor(m => m.Gender)@*, "", new { @class = "text-danger" }*@
                             </div>
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Date Of Birth *</label>
