--- a/SchoolDiarySystem/Views/Topic/Create.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Create.cshtml
@@ -23,20 +23,20 @@
                         <h3>Create Topic</h3>
                     </div>
                 </div>
-                @using (Html.BeginForm("Create", "Student", FormMethod.Post))
+                @using (Html.BeginForm("Create", "Topic", FormMethod.Post))
                 {
                     <form class="new-added-form">
                         <div class="row">
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Select Class *</label>
-                                @Html.DropDownList("ClassID", null, new { @class = "select2" })
+                                @Html.DropDownListFor(m => m.ClassID, Model.ClassesList, new { @class = "select2" })
                                 @Html.ValidationMessageFor(m => m.ClassID, "", new { @class = "text-danger" })
                             </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Select Subject *</label>
-                                @Html.DropDownList("SubjectID", null, new { @class = "select2" })
+                                @Html.DropDownListFor(m => m.SubjectID, Model.SubjectsList, new { @class = "select2" })
                                 @Html.ValidationMessageFor(m => m.SubjectID, "", new { @class = "text-danger" })
                             </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -46,15 +46,16 @@
                                 @Html.ValidationMessageFor(m => m.TopicDate, "", new { @class = "text-danger" })
                             </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
-                                <label>Select Time *</label>
-                                @Html.DropDownList("Time", null, new { @class = "select2" })
-                                @Html.ValidationMessageFor(m => m.ClassID, "", new { @class = "text-danger" })
-                                <i class="far fa-calendar-alt"></i>
-                            </div>
-                            <div class="col-xl-3 col-lg-6 col-12 form-group">
+                        <div class="col-xl-3 col-lg-6 col-12 form-group">
+                            <label>Select Time *</label>
+                            @Html.DropDownListFor(m => m.Time, Model.Times, new { @class = "select2" })
+                            @Html.ValidationMessageFor(m => m.Time, "", new { @class = "text-danger" })
+                            <i class="far fa-calendar-alt"></i>
+                        </div>
+                            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                            <div class="col-xl-6 col-lg-6 col-12 form-group">
                                 <label>Content *</label>
-                                @Html.TextBoxFor(m => m.Content, new { @class = "textarea form-control", placeholder = "Last name...", id = "lastname" })
+                                @Html.TextAreaFor(m => m.Content, new { @class = "textarea form-control", placeholder = "Last name...", id = "lastname" })
                                 @Html.ValidationMessageFor(m => m.Content, "", new { @class = "text-danger" })
                             </div>
                             <div class="col-12 form-group mg-t-8">
