--- a/SchoolDiarySystem/Views/User/ChangePassword.cshtml
+++ b/SchoolDiarySystem/Views/User/ChangePassword.cshtml
@@ -31,6 +31,7 @@
                     <form class="new-added-form">
                         <div class="row">
                             <div class="col-xl-4 col-lg-4 col-12 form-group">
+                                @Html.HiddenFor(m => m.UserID)
                                 <label>Username *</label>
                                 @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Last name...", id = "lastname", disabled = "disabled" })
                                 @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger" })
