--- a/SchoolDiarySystem/Views/User/Update.cshtml
+++ b/SchoolDiarySystem/Views/User/Update.cshtml
@@ -34,6 +34,7 @@
                             @if (Model.RoleID == 1 || Model.RoleID == 3)
                             {
                                 <div class="col-xl-4 col-lg-6 col-12 form-group">
+                                    @Html.HiddenFor(m => m.UserID)
                                     <label>First Name *</label>
                                     @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First name...", id = "firstname" })
                                     @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "text-danger" })
@@ -46,19 +47,21 @@
                             }
                             else if (Model.RoleID == 2)
                             {
-                                <div class="col-xl-4 col-lg-6 col-12 form-group">
-                                    <label>Teacher *</label>
-                                    @Html.DropDownList("TeacherID", null, new { @class = "select2" })
-                                    @Html.ValidationMessageFor(m => m.TeacherID, "", new { @class = "text-danger" })
-                                </div>
+                        <div class="col-xl-4 col-lg-6 col-12 form-group">
+                            @Html.HiddenFor(m => m.UserID)
+                            <label>Teacher *</label>
+                            @Html.DropDownList("TeacherID", null, new { @class = "select2" })
+                            @Html.ValidationMessageFor(m => m.TeacherID, "", new { @class = "text-danger" })
+                        </div>
                             }
                             else if (Model.RoleID == 4)
                             {
-                                <div class="col-xl-4 col-lg-6 col-12 form-group">
-                                    <label>Parent *</label>
-                                    @Html.DropDownList("ParentID", null, new { @class = "select2" })
-                                    @Html.ValidationMessageFor(m => m.ParentID, "", new { @class = "text-danger" })
-                                </div>
+                        <div class="col-xl-4 col-lg-6 col-12 form-group">
+                            @Html.HiddenFor(m => m.UserID)
+                            <label>Parent *</label>
+                            @Html.DropDownList("ParentID", null, new { @class = "select2" })
+                            @Html.ValidationMessageFor(m => m.ParentID, "", new { @class = "text-danger" })
+                        </div>
                             }
                             <div class="col-xl-4 col-lg-4 col-12 form-group">
                                 <label>Expire Date *</label>
